Do not fork, run tests in parallel